--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,7 +39,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [uploadBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
