--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         ],
         "compile": [
           "rm web/app_dev.php",
-          "php app/console assetic:dump --no-debug"
+          "php app/console assetic:dump --no-debug",
+          "php app/console doctrine:schema:update --force"
         ]        
     },
     "config": {
