--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -1,29 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.8/phpunit.xsd"
+<!--<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
          backupGlobals="false"
          colors="true"
-         bootstrap="bootstrap.php.cache"
+         bootstrap="input.bootstrap.php"
+         convertErrorsToExceptions="false"
+         convertNoticesToExceptions="false"
+         convertWarningsToExceptions="false"
+         processIsolation="true"
+         
+>-->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
+         backupGlobals="true"
+	 backupStaticAttributes = "true"
+         colors="true"
+         bootstrap="input.bootstrap.php"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+	 stopOnFailure= "true"
+	 syntaxCheck= "false"
+         
 >
-    <php>
-        <ini name="error_reporting" value="-1" />
-        <!--
-            <server name="KERNEL_DIR" value="/path/to/your/app/" />
-        -->
+    
+     <php>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
     </php>
+<!--    <php>
+        <ini name="error_reporting" value="-1" />
+        
+            <server name="KERNEL_DIR" value="/path/to/your/app/" />
+        
+    </php>-->
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>../src/*/*Bundle/Tests</directory>
-            <directory>../src/*/Bundle/*Bundle/Tests</directory>
-            <directory>../src/*Bundle/Tests</directory>
-        </testsuite>
-    </testsuites>
-
+       <testsuite name="Project Test Suite">
+           <directory>../src/*/*Bundle/Tests</directory>
+           <directory>../src/*/Bundle/*Bundle/Tests</directory>
+           <directory>../src/*Bundle/Tests</directory>
+       </testsuite>
+   </testsuites> 
+    
+<!--    <php>
+        <server name="KERNEL_DIR" value="../app/" />
+    </php>-->
+    <!--    <logging>
+        <log type="coverage-html" target="build/coverage" title="premiumACCESS" charset="UTF-8" yui="true" highlight="true"
+       lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
+    </logging>-->
+   
     <filter>
-        <whitelist>
+        <whitelist addUncoveredFilesFromWhitelist="false">
             <directory>../src</directory>
             <exclude>
                 <directory>../src/*Bundle/Resources</directory>
