--- a/src/uploadBundle/Resources/config/services.yml
+++ b/src/uploadBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    upload.example:
-#        class: uploadBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    user:
+        class: uploadBundle\Services\UserManager
+        arguments: ['@doctrine.orm.entity_manager']
+
