--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -49,7 +49,7 @@
         <server name="KERNEL_DIR" value="../app/" />
     </php>-->
     <logging>
-        <log type="junit" target="web/uploads/junit.xml" logIncompleteSkipped="false"/>
+        <log type="junit" target="../web/uploads/junit.xml" logIncompleteSkipped="false"/>
     </logging>
    
     <filter>
