Adding code for Testing

--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -45,9 +45,10 @@
        </testsuite>
    </testsuites> 
     
-<!--    <php>
+    <php>
         <server name="KERNEL_DIR" value="../app/" />
-    </php>-->
+    </php>
+    
     <logging>
         <log type="junit" target="../web/uploads/junit.xml" logIncompleteSkipped="false"/>
     </logging>
