Adding code for Testing

--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,7 @@
         "compile": [
           "rm web/app_dev.php",
           "php app/console assetic:dump --no-debug",
-          "php app/console doctrine:schema:update --force",
-          "bin/phpunit -c app"
+          "php app/console doctrine:schema:update --force"          
         ]        
     },
     "config": {
