--- a/build.xml
+++ b/build.xml
@@ -87,7 +87,8 @@
 
   <target name="deploy">
     <echo message="Deploying code on Heroku" />
-    <exec dir="${basedir}" executable="/var/lib/jenkins/Heroku/heroku_login.exp" failonerror="true">
+    <exec dir="${basedir}" executable="/usr/bin/expect" failonerror="true">
+      <arg value="heroku_login.exp"/>
     </exec>  
     <exec dir="${basedir}" executable="/var/lib/jenkins/Heroku/heroku_create_app" failonerror="true">
     </exec>
@@ -101,7 +102,8 @@
 
   <target name="destroy" depends="deploy">
     <echo message="Destroying heroku app" />
-    <exec dir="${basedir}" executable="/usr/local/bin/heroku apps:destroy" failonerror="true">
+    <exec dir="${basedir}" executable="/usr/local/bin/heroku" failonerror="true">
+            <arg value="apps:destroy"/>
             <arg value="--confirm"/>
             <arg value="ib-heroku"/>
     </exec>
