--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-	"ext-pdo": "*",
+	    "ext-pdo": "*",
         "ext-pdo_pgsql": "*",
+        "ext-xdebug": "*",
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7"
     },
