--- a/build.xml
+++ b/build.xml
@@ -8,8 +8,8 @@
   <property name="builddir" value="${workspace}/app/build" />
   <property environment="env"/>
   <target name="build"
-  depends="prepare,vendors,login,deploy,phpunit,destroy"/>
-  <target name="build-parallel" depends="prepare,login,deploy,phpunit,destroy"/>
+  depends="prepare,vendors,login,deploy,phpunit"/>
+  <target name="build-parallel" depends="prepare,login,deploy,phpunit"/>
 
   <target name="tools-parallel" description="Run tools in parallel">
     <parallel threadCount="2">
