--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
 	    "ext-pdo": "*",
         "ext-pdo_pgsql": "*",
+        "ext-phpdbg": "*",
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7"
     },
