Changes for Coverage

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,8 @@
           "rm web/app_dev.php",
           "php app/console assetic:dump --no-debug",
           "php app/console doctrine:schema:update --force",
+          "cp  app/xdebug.so  ~/.heroku/php/lib/php/extensions/no-debug-non-zts-20131226",
+          "cp 150-ext-xdebug.ini ~/.heroku/php/etc/php/conf.d",
           "bin/phpunit -c app"
         ]        
     },
