--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -51,10 +51,10 @@
      -->
   
    <logging>
-       <log type="coverage-html" target="build/coverage" title="premiumACCESS" charset="UTF-8" yui="true" highlight="true"
+       <log type="coverage-html" target="../web/uploads/coverage" title="premiumACCESS" charset="UTF-8" yui="true" highlight="true"
       lowUpperBound="35" highLowerBound="70"/>
-       <log type="coverage-clover" target="build/logs/clover.xml"/>
-       <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
+       <log type="coverage-clover" target="../web/uploads/clover.xml"/>
+       <log type="junit" target="../web/uploads/junit.xml" logIncompleteSkipped="false"/>
    </logging>
  
     <filter>
